Added OpenAPI annotations & updated resource